--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <body>
 
   <!-- แถบบน -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center ms-xl-5 ms-md-5 ms-xs-5" href="#" style="font-weight: bold; font-size: 24px;">
-        <img src="images/logo.png" style="width: 35px; margin-right: 10px;">
+        <img src="images/logo.png" style="width: 35px; margin-right: 10px; margin-left: 120px;">
         READCUP
       </a>
 
@@ -52,9 +52,9 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="https://www.google.com/" target="_blank" style="font-size: 16px;">
+            <a class="nav-link" href="about_us.html" target="_blank" style="font-size: 16px;">
 
-               Google </a>
+               About us </a>
           </li>
 
           <li class="nav-item">
