--- a/about_us.html
+++ b/about_us.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+
+
+
+
+<style>
+
+body {
+  background-color: #e8e4d9;
+  margin: 0; /* เคลียร์ margin ของ body เพื่อไม่ให้ขอบขาว */
+}
+ .team-member {
+            text-align: center;
+        }
+
+        .team-member img {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 50%; /* ทำให้เป็นวงกลม */
+            
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+
+        .team-member p {
+            margin-top: 10px;
+            font-size: 18px;
+            font-weight: bold;
+            color: #333;
+        }
+
+
+
+</style>
+
 </head>
+
 <body>
-    <h3> About US </h3>
+
+
+
+    <h3 style="text-align: center;"> About US </h3>
+
+    <div class="team-member">
+        <img src="images/author.jpg" alt="Team Member">
+        <p style="font-size: 22px; font-weight: bold; color: #333;">Fredrik Backman</p>
+
+
 </body>
 </html>
