--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> "A Man Called Ove" – หนังสือสร้างแรงบันดาลใจ ที่จะทำให้คุณมองชีวิตด้วยแววตาใหม่ </title>
-  <meta name="keywords" content="หนังสือเยียวยาหัวใจ, ความสัมพันธ์มนุษย์, ความรัก, ความเมตตา, สร้างแรงบันดาลใจ, เข้าใจชีวิต">
-  <meta name="description" content="“A Man Called Ove” หนังสือเยียวยาหัวใจ ถ่ายทอดความรักและความเมตตา ผ่านความสัมพันธ์มนุษย์ อ่านเพื่อเข้าใจชีวิตอย่างลึกซึ้ง">
+  <title> “A Man Called Ove” – หนังสือที่ทำให้คุณเข้าใจชีวิต ความรัก และการสูญเสีย </title>
+  <meta name="keywords" content="หนังสือเยียวยาใจ, มิตรภาพ, ชีวิต, ความรัก, การสูญเสีย, ความเปลี่ยนแปลง">
+  <meta name="description"
+    content="สัมผัสเรื่องราวของชายผู้โดดเดี่ยวที่จะทำให้คุณหัวเราะ ร้องไห้ และเข้าใจความหมายของชีวิต ความรัก และการสูญเสียใน A Man Called Ove">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -26,7 +27,8 @@
   <!-- แถบบน -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
     <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center ms-xl-5 ms-md-5 ms-xs-5" href="#" style="font-weight: bold; font-size: 24px;">
+      <a class="navbar-brand d-flex align-items-center ms-xl-5 ms-md-5 ms-xs-5" href="#"
+        style="font-weight: bold; font-size: 24px;">
         <img src="images/logo.png" style="width: 35px; margin-right: 10px; margin-left: 120px;">
         READCUP
       </a>
@@ -40,27 +42,27 @@
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#benefit" style="font-size: 18px;"> 
+            <a class="nav-link active" aria-current="page" href="#benefit" style="font-size: 18px;">
 
-              ได้อะไรจากการอ่าน? </a>
+              ทำไมควรอ่าน? </a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="#useful" style="font-size: 18px;">
 
-               ประโยชน์ของหนังสือ </a>
+              ประโยชน์ของหนังสือ </a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="about_us.html" target="_blank" style="font-size: 16px;">
 
-               About us </a>
+              About us </a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="document/file-sample_150kB.pdf" target="_blank" style="font-size: 16px;">
 
-               Download </a>
+              Download </a>
           </li>
 
         </ul>
@@ -76,8 +78,8 @@
   <div class="content-wrapper">
     <div class="content-inner container">
 
-      <img src="images/book-img2.jpg" alt="A Man Called Ove Book Cover" class="book-img img-fulid" data-aos="fade-right"
-        data-aos-duration="3000">
+      <img src="images/book-img-cover.jpg" alt="A Man Called Ove Book Cover" class="book-img img-fulid"
+        data-aos="fade-right" data-aos-duration="3000">
 
       <p class="quote-text">
         “เบื้องหลังคนหัวแข็ง <br>
@@ -96,17 +98,19 @@
       <p style="text-indent: 2em;">
       <p>
         <strong>“A Man Called Ove”</strong> เล่าเรื่องของชายชราคนหนึ่งที่ดูดื้อรั้น เคร่งเครียด และเย็นชา
-        แต่ภายใต้ท่าทีเหล่านั้น คือหัวใจที่เต็มไปด้วยบาดแผล ความรักที่ไม่เคยจาง และความหวังที่ยังแอบหลงเหลืออยู่
+        แต่ภายใต้ท่าทีเหล่านั้น
+        คือหัวใจที่เต็มไปด้วยบาดแผล ความรักที่ไม่เคยจาง และความหวังที่ยังแอบหลงเหลืออยู่
       </p>
 
       <p>
-        นี่ไม่ใช่แค่เรื่องของชายแก่ขี้โมโหคนหนึ่ง — แต่คือเรื่องของ “การเยียวยาหัวใจ”
-        ผ่านผู้คนธรรมดาที่เข้ามาเปลี่ยนชีวิตเขาทีละน้อย โดยไม่รู้ตัว
+        นี่ไม่ใช่แค่เรื่องของชายแก่ขี้โมโหคนหนึ่ง — แต่คือเรื่องของ การเยียวยาหัวใจ ผ่าน มิตรภาพ
+        และความสัมพันธ์ธรรมดาที่
+        เข้ามาเปลี่ยนชีวิตเขาทีละน้อย ช่วยให้เขาเรียนรู้ ชีวิต, ความเปลี่ยนแปลง, และการรับมือกับ การสูญเสีย
       </p>
 
       <p><i>
           ถ้าคุณเคยรู้สึกว่าตัวเองถูกเข้าใจผิด หรือรู้สึกเหงาในโลกที่วุ่นวาย
-          หนังสือเล่มนี้อาจพูดแทนใจคุณได้อย่างเงียบงันที่สุด
+          หนังสือเล่มนี้คือ หนังสือเยียวยาใจ ที่อาจพูดแทนใจคุณได้อย่างเงียบงันที่สุด
         </i></p>
       </p>
     </div>
@@ -114,36 +118,54 @@
 
     <!-- ได้อะไร -->
     <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">
-      <img src="images/eyeglasses.png" style="width: 100px; height: auto;">
+      <img src="images/self-love.png" style="width: 90px; height: auto; text-indent: 3em;">
       <h3 id="benefit" class="sriracha-text" style="scroll-margin-top: 250px;">
-        ความรัก ความเมตตา และการเยียวยาหัวใจ</h3>
+        รักเล็ก ๆ ที่เยียวยาใจ</h3>
 
-      <p style="text-indent: 2em;">
-        ถ้าคุณอ่าน A Man Called Ove แล้ว คุณจะได้เจอเรื่องราวของชายคนหนึ่งที่ชีวิตดูเหมือนจะขมขื่น
-        แต่จริง ๆ แล้วเขามีหัวใจที่อบอุ่นและรักใคร่ลึกซึ้ง หนังสือเล่มนี้จะทำให้คุณเข้าใจว่า…
-        <strong>คนบางคนที่ดูดื้อหรือแข็งกร้าว อาจแค่ต้องการใครสักคนเข้าใจและอยู่ข้าง ๆ</strong>
-        คุณจะได้เห็นว่า ความรัก ความเมตตา และความสัมพันธ์เล็ก ๆ รอบตัวเรา… มันสำคัญและเปลี่ยนแปลงชีวิตได้มากกว่าที่คิด
-        ถ้าคุณเคยรู้สึกเหงา หรือว่าคนรอบข้างไม่เข้าใจ คุณจะรู้สึกว่า… คุณไม่ได้อยู่คนเดียวเลยในความรู้สึกนี้
+      <p style="text-indent: 2em; ">
+        ถ้าคุณกำลังมองหา <strong>หนังสือเยียวยาใจ</strong> ที่อ่านแล้วอบอุ่นหัวใจ และช่วยให้มองโลกด้วยมุมใหม่ <strong>
+          Man Called Ove</strong>
+        คือหนึ่งในเล่มที่ไม่ควรพลาด เรื่องราวของชายชราจอมบ่นผู้ใช้ชีวิตอย่างโดดเดี่ยว แต่กลับถูกเปลี่ยนแปลงด้วยพลังของ
+        <strong>มิตรภาพ และความสัมพันธ์</strong>ที่ไม่คาดคิดจากเพื่อนบ้านใหม่<br>
+        <br>
+        นิยายเรื่องนี้ถ่ายทอดความหมายของ <strong>ชีวิต</strong> ได้อย่างลึกซึ้ง — จากความเรียบง่ายของวันธรรมดา
+        ไปจนถึงการเรียนรู้ที่จะเปิดใจอีกครั้ง หลังผ่าน ความสูญเสีย อันเจ็บปวด ผู้เขียน Fredrik Backman ถ่ายทอดตัวละคร
+        “โอเว่” ให้เรารู้สึกทั้งขบขัน ซาบซึ้ง และเข้าใจว่าทุกคนต่างมีเรื่องราวของตัวเองซ่อนอยู่<br>
+        <br>
+        สิ่งที่ทำให้ <strong>A Man Called Ove เป็น หนังสือเยียวยาใจอบอุ่นหัวใจ</strong>
+        คือการผสมผสานระหว่างอารมณ์ขันอันอบอุ่นกับความเศร้าที่งดงาม หนังสือเล่มนี้จะพาคุณสำรวจความหมายของ
+        <strong>มิตรภาพ,
+          ความรัก, และ ความเปลี่ยนแปลง</strong> ที่เกิดขึ้นเมื่อเรายอมเปิดประตูหัวใจให้กับคนอื่น<br>
+        <br>
+        ไม่ว่าคุณจะเคยผ่านช่วงเวลาโดดเดี่ยว สูญเสียคนสำคัญ หรือกำลังมองหากำลังใจในการเริ่มต้นใหม่ A Man Called Ove
+        จะทำให้คุณเชื่ออีกครั้งว่า <i>“แม้ชีวิตจะไม่สมบูรณ์แบบ แต่ความเมตตาเล็กๆ จากผู้อื่น
+          ก็เพียงพอที่จะเยียวยาหัวใจเราได้"</i>
       </p>
     </div>
 
 
     <!-- ประโยชน์ -->
     <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">
-      <img src="images/self-love.png" style="width: 90px; height: auto; margin-bottom: 15px;">
+      <img src="images/book.png" style="width: 90px; height: auto; margin-bottom: 15px; text-indent: 3em;">
 
       <h3 id="useful" class="sriracha-text" style=" scroll-margin-top: 250px;">
         หนังสือเล่มนี้จะช่วยให้คุณ… </h3>
 
       <p style="line-height: 2.5; text-align: left;">
-        1. <strong>เข้าใจและเห็นใจ</strong>คนที่แตกต่างจากตัวเองมากขึ้น<br>
+        1. เข้าใจและเห็นใจคนที่แตกต่างจากตัวเองมากขึ้น ผ่านเรื่องราวของ <strong>มิตรภาพ</strong>
+        และการใช้ชีวิตของตัวละคร
+        <br>
 
-        2. รู้ว่า <strong>“ความใส่ใจเล็ก ๆ น้อย ๆ”</strong> ในชีวิตประจำวัน สามารถสร้างความเปลี่ยนแปลงครั้งใหญ่ได้<br>
+        2. ตระหนักว่า <strong>“ความใส่ใจเล็ก ๆ น้อย ๆ”</strong> ในชีวิตประจำวัน สามารถสร้าง
+        <strong>ความเปลี่ยนแปลงครั้งใหญ่</strong>
+        และเติมเต็มความหมายของ <strong>ชีวิต</strong>
+        <br>
 
-        3. ได้<strong>แรงบันดาลใจที่จะไม่ยอมแพ้</strong> แม้ชีวิตจะเจอเรื่องยาก ๆ<br>
+        3. ได้แรงบันดาลใจที่จะไม่ยอมแพ้ แม้ต้องเผชิญ <strong>ความสูญเสีย</strong> หรือเรื่องราวยาก ๆ ในชีวิต<br>
 
-        4. รู้สึกอบอุ่นใจ และเห็นความหมายของคำว่า <strong>“ครอบครัว” และ “เพื่อน”</strong> ในแบบที่ลึกซึ้ง
-        พูดง่าย ๆ คือ ถ้าคุณอยากได้หนังสือที่ทำให้หัวใจนุ่มขึ้น และมองโลกในมุมใหม่ ๆ เล่มนี้เหมาะกับคุณแน่นอน
+        4. รู้สึกอบอุ่นหัวใจ และเห็นความหมายของ <strong>ครอบครัว เพื่อน และความรัก</strong> ในมุมที่ลึกซึ้ง<br>
+        พูดง่าย ๆ คือ ถ้าคุณกำลังมองหา <i>หนังสือเยียวยาใจ</i> ที่ทำให้หัวใจนุ่มขึ้น และมองโลกในมุมใหม่ ๆ
+        เล่มนี้เหมาะสำหรับคุณแน่นอน
       </p>
     </div>
 
@@ -158,17 +180,17 @@
       <div class="carousel-inner">
         <!-- 1 -->
         <div class="carousel-item active">
-          <img src="images/mountain.webp" class="d-block w-100" alt="...">
+          <img src="images/book-img-pic.jpg" class="d-block w-80 container" alt="...">
         </div>
 
         <!-- 2 -->
         <div class="carousel-item">
-          <img src="images/lake.avif" class="d-block w-100" alt="...">
+          <img src="images/book-img-back.png" class="d-block w-80 container" alt="...">
         </div>
 
         <!-- 3 -->
         <div class="carousel-item">
-          <img src="images/kayak.avif" class="d-block w-100" alt="...">
+          <img src="images/book-img-front.png" class="d-block w-80 container" alt="...">
         </div>
       </div>
 
@@ -193,18 +215,17 @@
         <h2 class="accordion-header">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
             aria-expanded="true" aria-controls="collapseOne">
-            <strong> ได้อะไรจากการอ่าน? </strong>
+            <strong> ทำไมควรอ่าน? </strong>
           </button>
         </h2>
 
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
           <div class="accordion-body">
-            ถ้าคุณอ่าน A Man Called Ove แล้ว คุณจะได้เจอเรื่องราวของชายคนหนึ่งที่ชีวิตดูเหมือนจะขมขื่น
-            แต่จริง ๆ แล้วเขามีหัวใจที่อบอุ่นและรักใคร่ลึกซึ้ง หนังสือเล่มนี้จะทำให้คุณเข้าใจว่า…
-            คนบางคนที่ดูดื้อหรือแข็งกร้าว อาจแค่ต้องการใครสักคนเข้าใจและอยู่ข้าง ๆ
-            คุณจะได้เห็นว่า ความรัก ความเมตตา และความสัมพันธ์เล็ก ๆ รอบตัวเรา…
-            มันสำคัญและเปลี่ยนแปลงชีวิตได้มากกว่าที่คิด
-            ถ้าคุณเคยรู้สึกเหงา หรือว่าคนรอบข้างไม่เข้าใจ คุณจะรู้สึกว่า… คุณไม่ได้อยู่คนเดียวเลยในความรู้สึกนี้
+            ‘A Man Called Ove’ จะพาคุณไปสัมผัสชีวิตของชายคนหนึ่งที่แม้เต็มไปด้วยการสูญเสีย
+            แต่ก็เรียนรู้ที่จะเปิดใจรับความเปลี่ยนแปลงและมิตรภาพใหม่ ๆ เรื่องราวของโอเว่ทำให้เราหัวเราะ ซาบซึ้ง
+            และเข้าใจว่าทุกคนต่างมีเรื่องราวและความรักซ่อนอยู่ในชีวิต หนังสือเล่มนี้จะทำให้คุณเห็นคุณค่าของความเมตตาเล็ก
+            ๆ ความรัก และมิตรภาพที่สามารถเยียวยาหัวใจเราได้ แม้ชีวิตจะไม่ได้สมบูรณ์แบบ
+            แต่การเปิดใจรับความเปลี่ยนแปลงจะทำให้ทุกวันมีความหมายมากขึ้น
           </div>
         </div>
       </div>
@@ -220,23 +241,62 @@
 
         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
           <div class="accordion-body">
-            <p> 1. เข้าใจและเห็นใจคนที่แตกต่างจากตัวเองมากขึ้น<br>
+            <p> 1. เข้าใจและเห็นใจคนที่แตกต่างจากตัวเองมากขึ้น ผ่านเรื่องราวของ มิตรภาพ และการใช้ชีวิตของตัวละคร<br>
 
-              2. รู้ว่า “ความใส่ใจเล็ก ๆ น้อย ๆ” ในชีวิตประจำวัน สามารถสร้างความเปลี่ยนแปลงครั้งใหญ่ได้<br>
+              2. ตระหนักว่า ความใส่ใจเล็ก ๆ น้อย ๆ ในชีวิตประจำวันสามารถสร้าง ความเปลี่ยนแปลง ครั้งใหญ่
+              และเติมเต็มความหมายของ ชีวิต<br>
 
-              3. ได้แรงบันดาลใจที่จะไม่ยอมแพ้ แม้ชีวิตจะเจอเรื่องยาก ๆ<br>
+              3. ได้แรงบันดาลใจที่จะไม่ยอมแพ้ แม้ต้องเผชิญ ความสูญเสีย หรือเรื่องราวยาก ๆ ในชีวิต<br>
 
-              4. รู้สึกอบอุ่นใจ และเห็นความหมายของคำว่า “ครอบครัว” และ “เพื่อน” ในแบบที่ลึกซึ้ง
-              พูดง่าย ๆ คือ ถ้าคุณอยากได้หนังสือที่ทำให้หัวใจนุ่มขึ้น และมองโลกในมุมใหม่ ๆ เล่มนี้เหมาะกับคุณแน่นอน
+              4. รู้สึกอบอุ่นหัวใจ และเห็นความหมายของ ครอบครัว, เพื่อน, และ ความรัก ในมุมที่ลึกซึ้ง
             </p>
           </div>
         </div>
       </div>
 
-    
+
     </div>
   </div>
 
+
+
+
+
+  <div>
+    <h3 class="sriracha-text container" style="text-align: center; margin-top: 50px;">
+      แนะนำหนังสือเพิ่มเติม</h3>
+
+  </div>
+
+
+  <div
+    style="display: flex; justify-content: center; gap: 70px; flex-wrap: wrap; margin-top: 30px; padding-bottom: 30px;">
+    <div class="book-card" style="margin: 0; cursor: pointer; transition: all 0.3s ease;">
+      <img src="images/grandma.jpg" alt="ยายฝากบอกว่าขอโทษ" class="book-card-img">
+      <div class="book-card-content">
+        <h5 class="book-card-title">
+          ยายฝากบอกว่าขอโทษ:<br> MY GRANDMOTHER ASKED ME TO TELL YOU SHE'S SORRY
+        </h5>
+        <p class="book-card-description">
+          ท่ามกลางความวุ่นวายที่เกิดขึ้น เอลซ่ารู้ว่ายายรักเธอยิ่งกว่าใคร และในทางกลับกัน
+          เอลซ่าก็นับว่ายายเป็นทุกสิ่งทุกอย่างในชีวิตที่เธอมีอยู่ <i>ยายฝากบอกว่าขอโทษ</i>
+        </p>
+      </div>
+    </div>
+
+    <div class="book-card" style="margin: 0; cursor: pointer;">
+      <img src="images/marie.jpg" alt="ยายฝากบอกว่าขอโทษ" class="book-card-img">
+      <div class="book-card-content">
+        <h5 class="book-card-title">
+          บริทท์มารีอยู่ตรงนี้: Britt-Marie Was Here
+        </h5>
+        <p class="book-card-description">
+          ในวัย 63 บริทท์มารีเริ่มชีวิตใหม่หลังกลายเป็นโสด
+          เธอเข้าชุมชนที่ใกล้จะตายเพื่อค้นหา <i>“ตัวตนที่หายไป”</i> และเติมเต็มชีวิตที่เคยฝากไว้กับคนอื่น
+        </p>
+      </div>
+    </div>
+  </div>
 
 
 
